# sct

./: .gitmodules  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  SysCheck.cmake  Utils.cmake
cmake/Modules/: FindBenchmark.cmake  Findgflags.cmake  Findglog.cmake
docs/: notes.md  todo.md
sct/: CMakeLists.txt
sct/analysis/: CMakeLists.txt  calculate_centrality.cc  compare_glauber.cc  create_tof_pileup_mask.cc  draw_event.cc  fit_glauber_to_data.cc  post_glauber_check.cc  pre_glauber_corrections.cc  refmult_fit.cc  run_glauber.cc  run_systematics.cc  test_refmultcorr.cc
sct/centrality/: CMakeLists.txt  centrality.cc  centrality.h  centrality.hh  centrality_def.cc  centrality_def.h  centrality_def.hh  centrality_test.cc  multiplicity_model.cc  multiplicity_model.h  multiplicity_model.hh  nbd_fit.cc  nbd_fit.h  nbd_fit.hh  nbd_fit_test.cc  refmultcorr_template.cc  refmultcorr_template.h
sct/core/: CMakeLists.txt  base.h  base.hh  collision.cc  collision.h  collision.hh  collision_benchmark.cc  collision_test.cc  enumerations.h  enumerations.hh  flags.cc  flags.h  flags.hh  glauber_tree.cc  glauber_tree.h  glauber_tree.hh  logging.cc  logging.h  logging.hh  macros.h  macros.hh  macros.hh.in  mc_glauber.cc  mc_glauber.h  mc_glauber.hh  mc_glauber_benchmark.cc  mc_glauber_test.cc  nucleon.cc  nucleon.h  nucleon.hh  nucleon_test.cc  nucleus.cc  nucleus.h  nucleus.hh  nucleus_benchmark.cc  nucleus_test.cc  tree.cc  tree.hh
sct/glauber/: CMakeLists.txt  collision.cc  collision.h  collision_benchmark.cc  collision_test.cc  glauber_tree.cc  glauber_tree.h  mc_glauber.cc  mc_glauber.h  mc_glauber_benchmark.cc  mc_glauber_test.cc  nucleon.cc  nucleon.h  nucleon_pdf.cc  nucleon_pdf.h  nucleon_pdf_test.cc  nucleon_test.cc  nucleus.cc  nucleus.h  nucleus_benchmark.cc  nucleus_test.cc
sct/lib/: CMakeLists.txt  assert.cc  assert.h  enumerations.h  flags.cc  flags.h  logging.cc  logging.h  macros.h  macros.h.in  map.h  math.h  memory.h
sct/lib/memory/: CMakeLists.txt  make_unique.h
sct/lib/string/: CMakeLists.txt  path_utils.cc  path_utils.h  path_utils_test.cc  string.h  string_cast.h  string_cast_test.cc  string_utils.cc  string_utils.h  string_utils_test.cc
sct/stglauber/: CMakeLists.txt  compare_fitter_test.cc  compare_multiplicity_model_test.cc  compare_negative_binomial_test.cc
sct/systematics/: CMakeLists.txt  glauber_systematics.cc  glauber_systematics.h  glauber_systematics.hh  histogram_collection.cc  histogram_collection.h  histogram_collection.hh  histogram_collection_test.cc  systematic_cumulant.cc  systematic_cumulant.hh  systematic_variable.cc  systematic_variable.h  systematic_variable.hh  systematic_variable_test.cc
sct/test/: CMakeLists.txt  sct_gtest_main.cc
sct/utils/: CMakeLists.txt  functions.cc  functions.h  functions.hh  functions_test.cc  histogram_info.cc  histogram_info.h  histogram_info.hh  negative_binomial.cc  negative_binomial.h  negative_binomial.hh  negative_binomial_test.cc  nucleus_info.cc  nucleus_info.h  nucleus_info.hh  nucleus_info_test.cc  print_helper.h  print_helper.hh  random.cc  random.h  random.hh  random_benchmark.cc  random_test.cc
